src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_65_3.deca
// Description:
//    regle 3.65, la classe courante n'est pas sous classe de la classe contenant le champs.
//
// Resultats:
//    Ligne 12: 'x' is protected.
class A {
    protected int x = 1;
}
class X {
    void m() {
        A a = new A();
        println(a.x);
    }
}